--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-        ];<!DOCTYPE html>
+        <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -155,7 +155,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🌍 Flag Color Finder</h1>
+        <h1>🌍 Flag Colour Finder</h1>
         
         <div class="color-selector">
             <h2>Select Colors</h2>
@@ -446,4 +446,5 @@
         updateResults();
     </script>
 </body>
+
 </html>
